<resources>
    <string name="app_name">HW#2:杜晉宇</string>
    <string name="sex">sex</string>
    <string name="input_sex">(輸入性別)</string>
    <string name="age">age</string>
    <string name="input_age">(輸入年齡)</string>
    <string name="button">OK</string>
    <string name="suggestion">suggestion：</string>
    <string name="sug_not_hurry">"not hurry"</string>
    <string name="sug_get_married">"get marry"</string>
    <string name="sug_find_couple">"find couple"</string>
    <string name="male">"male"</string>
    <string name="female">"female"</string>
</resources>
